[project]
name = "WTForms-SQLAlchemy"
description = "SQLAlchemy tools for WTForms"
readme = "README.rst"
license = {file = "LICENSE.txt"}
maintainers = [{name = "WTForms"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10"
dependencies = [
    "WTForms>=3.1",
    "SQLAlchemy>=1.4",
]
dynamic = ["version"]

[dependency-groups]
docs = [
    "Sphinx~=7.0.0",
    "Pallets-Sphinx-Themes~=2.2.0",
    "sphinx-issues~=4.0.0",
    "sphinxcontrib-log-cabinet~=1.0.1",
    "python-dateutil~=2.8.2",
]
dev = [
    "coverage>=7.0",
    "pytest>=8.0",
    "prek>=0.1",
    "tox-uv>=1.28.1",
]

[project.urls]
Documentation = "https://wtforms-sqlalchemy.readthedocs.io/"
Changes = "https://wtforms-sqlalchemy.readthedocs.io/changes/"
"Source Code" = "https://github.com/pallets-eco/wtforms-sqlalchemy/"
"Issue Tracker" = "https://github.com/pallets-eco/wtforms-sqlalchemy/issues/"
Chat = "https://discord.gg/pallets"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wtforms_sqlalchemy"]

[tool.hatch.version]
path = "src/wtforms_sqlalchemy/__init__.py"

[tool.hatch.build]
include = [
    "src/",
    "docs/",
    "tests/",
    "CHANGES.rst",
]
exclude = [
    "docs/_build/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.tox]
env_list = [
    "py313",
    "py312",
    "py311",
    "py310",
    "pypy310",
    "style",
    "docs",
    "minversions",
]

[tool.tox.env_run_base]
runner = "uv-venv-runner"
dependency_groups = ["dev"]
commands = [["pytest", "{posargs}"]]

[tool.tox.env.style]
skip_install = true
commands = [["prek", "run", "--all-files", "--show-diff-on-failure"]]

[tool.tox.env.docs]
dependency_groups = ["docs"]
commands = [["sphinx-build", "-W", "-b", "html", "-d", "{env_tmp_dir}/doctrees", "docs", "{env_tmp_dir}/html"]]

[tool.tox.env.coverage]
commands = [
    ["coverage", "run", "-m", "pytest", "--tb=short", "--basetemp={env_tmp_dir}", "{posargs}"],
    ["coverage", "html"],
    ["coverage", "report"],
]

[tool.tox.env.minversions]
uv_resolution = "lowest-direct"
commands = [["pytest", "--override-ini=filterwarnings=", "{posargs}"]]

[tool.coverage.run]
branch = true
source = ["wtforms_sqlalchemy", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError:",
]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
