[metadata]
name = WTForms-SQLAlchemy
version = 0.2
url = http://github.com/wtforms/wtforms-sqlalchemy/
project_urls =
    Documentation = https://wtforms-sqlalchemy.readthedocs.io/
    Code = https://github.com/wtforms/wtforms-sqlalchemy
    Issue Tracker = https://github.com/wtforms/wtforms-sqlalchemy/issues
license = BSD
license_files = LICENSE.txt
maintainer = Thomas Johansson, James Crasta
maintainer_email = wtforms@simplecodes.com
description = SQLAlchemy tools for WTForms
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = wtforms_sqlalchemy
include_package_data = true
python_requires = >= 3.6
install_requires =
  WTForms>=1.0.5
  SQLAlchemy>=0.7.10
tests_require = coverage
test_suite = tests.tests

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ modules export names
    **/__init__.py: F401, F403
